# charliechess

./: Cargo.toml
src/: main.rs  position.rs
src/game/: mod.rs
src/player/: mod.rs  random.rs  structs_and_traits.rs
src/position/: board.rs  color.rs  coordinates.rs  coup.rs  history.rs  mod.rs  piece.rs  pieces.rs
src/position/basic_piece_moves/: bishop_moves.rs  king_moves.rs  knight_moves.rs  mod.rs  pawn_moves.rs  queen_moves.rs  tower_moves.rs
src/position/board/: displayers.rs  editors.rs  initiators.rs  mod.rs  requestors.rs  types_and_structs.rs  updaters.rs
src/position/coordinates/: converters.rs  displayers.rs  initiators.rs  mod.rs  open_to_color.rs  operations.rs  types_and_structs.rs
src/position/moves/: bishop_moves.rs  king_moves.rs  knight_moves.rs  mod.rs  pawn_moves.rs  queen_moves.rs  tower_moves.rs
src/position/moves/basic_piece_moves/: king_moves.rs  knight_moves.rs  mod.rs  pawn_moves.rs  queen_moves.rs  tower_moves.rs
src/position/moves/possible_moves_enumeration/: mod.rs
