[package]
name = "charliechess"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.18.0", features = ["wgpu"] }
colored = "3.0.0"
crossterm = "0.29.0"
enum_str = "0.1.2"
flamegraph = "0.6.8"
fnv = "1.0.7"
num-derive = "0.4.2"
num-traits = "0.2.19"
ordered_hash_map = "0.4.0"
rand = "0.9.2"
regex = "1.11.1"
strum = "0.27.1"
strum_macros = "0.27.1"
unwrap = "1.2.1"

[profile.release]
debug = true
